# rust-wasm-fractals

./: .gitignore  .prettierrc.json  Cargo.toml  LICENSE  build.mjs  index copy.js  index.html  index.js  makefile  notes.md  readme.md
old/: Cargo.toml
old/src/: lib.rs
src/: console.rs  fractal.rs  fractals.rs  lib.rs  libZZ.rs
web/: custom-grad.js  fractal.js  index.html  main.css  main.js  settings.js  toast.js
