[package]
name = "rust-wasm-fractals"
version = "0.1.0"
authors = ["Ben Coleman <benc.uk@gmail.com>"]
edition = "2018"
description = "Fractals in Rust with WASM"
license = "MIT"
repository = "https://github.com/benc-uk/rust-wasm-fractals"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = ">=0.2.63"
num = ">=0.4.0"
colorgrad = ">=0.1.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[workspace]
[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
